--- a/cd/clouddriver.yml
+++ b/cd/clouddriver.yml
@@ -20,3 +20,20 @@ kubernetes:
     oAuthScopes: []
     onlySpinnakerManaged: false
     serviceAccount: true
+  - name: k8s-acc-test
+    requiredGroupMembership: []
+    providerVersion: V2
+    permissions: {}
+    dockerRegistries: []
+    configureImagePullSecrets: true
+    cacheThreads: 1
+    namespaces: []
+    omitNamespaces: []
+    kinds: []
+    omitKinds: []
+    customResources: []
+    cachingPolicies: []
+    #kubeconfigFile: /custom-volume/kubecfg-remote
+    oAuthScopes: []
+    onlySpinnakerManaged: false
+    serviceAccount: true
