--- a/cd/clouddriver-simple.yml
+++ b/cd/clouddriver-simple.yml
@@ -16,8 +16,9 @@ kubernetes:
     omitKinds: []
     customResources: []
     cachingPolicies: []
-    kubeconfigFile: /custom-volume/kubecfg-remote
+    #kubeconfigFile: /custom-volume/kubecfg-remote
     oAuthScopes: []
     onlySpinnakerManaged: false
-    kubectlExecutable: /pv/hang
+    #kubectlExecutable: /pv/hang
+    serviceAccount: true
 
