--- a/cd/clouddriver-manyaccounts.yml
+++ b/cd/clouddriver-manyaccounts.yml
@@ -49,7 +49,8 @@ kubernetes:
     omitKinds: []
     customResources: []
     cachingPolicies: []
-    kubeconfigFile: /custom-volume/kubecfg-remote
+    #kubeconfigFile: /custom-volume/kubecfg-remote
+    kubeconfigFile: configserver:blah
     oAuthScopes: []
     onlySpinnakerManaged: false
   - name: k8s-acc-4
