--- a/cd/cf-1.yml
+++ b/cd/cf-1.yml
@@ -4,7 +4,7 @@ cloudfoundry:
   - api: api.sys.sanmarcos.cf-app.com
     appsManagerUri: https://apps.sys.sanmarcos.cf-app.com
     name: cf-1
-    password: encrypted:s3!b:german-spinnaker!f:secrets/secrets.yml!k:cf-password
+    password: encrypted:s3!b:german-spinnaker!r:us-west-2!f:secrets/secrets.yml!k:cf-password
     permissions: {}
     requiredGroupMembership: []
     skipSslValidation: true
