--- a/demo/clouddriver.yml
+++ b/demo/clouddriver.yml
@@ -1,6 +1,6 @@
 kubernetes:
   accounts:
-  - name: k8s-acc-1
+  - name: account-1
     requiredGroupMembership: []
     providerVersion: V2
     permissions: {}
@@ -13,18 +13,22 @@ kubernetes:
     omitKinds: []
     customResources: []
     cachingPolicies: []
-    kubeconfigFile: ${KUBECONFIGS_HOME}/kubecfg-remote
+    kubeconfigFile: encryptedFile:s3!b:german-spinnaker!f:secrets/kubeconfig.yml
     oAuthScopes: []
     onlySpinnakerManaged: false
-
-#cloudfoundry:
-#  accounts:
-#  - api: api.sys.kolkata.cf-app.com
-#    appsManagerUri: https://apps.sys.kolkata.cf-app.com
-#    name: cf-1
-#    password: ${CF_PASSWORD}
-#    permissions: {}
-#    requiredGroupMembership: []
-#    skipSslValidation: true
-#    user: admin
-
+  - name: account-2
+    requiredGroupMembership: []
+    providerVersion: V2
+    permissions: {}
+    dockerRegistries: []
+    configureImagePullSecrets: true
+    cacheThreads: 1
+    namespaces: []
+    omitNamespaces: []
+    kinds: []
+    omitKinds: []
+    customResources: []
+    cachingPolicies: []
+    kubeconfigFile: encryptedFile:s3!b:german-spinnaker!f:secrets/kubeconfig.yml
+    oAuthScopes: []
+    onlySpinnakerManaged: false
