--- a/demo/clouddriver.yml
+++ b/demo/clouddriver.yml
@@ -13,22 +13,6 @@ kubernetes:
     omitKinds: []
     customResources: []
     cachingPolicies: []
-    kubeconfigFile: encryptedFile:s3!b:german-spinnaker!r:us-west-2!f:secrets/kubeconfig.yml
-    oAuthScopes: []
-    onlySpinnakerManaged: false
-  - name: account-2
-    requiredGroupMembership: []
-    providerVersion: V2
-    permissions: {}
-    dockerRegistries: []
-    configureImagePullSecrets: true
-    cacheThreads: 1
-    namespaces: []
-    omitNamespaces: []
-    kinds: []
-    omitKinds: []
-    customResources: []
-    cachingPolicies: []
-    kubeconfigFile: encryptedFile:s3!b:german-spinnaker!r:us-west-2!f:secrets/kubeconfig.yml
+    serviceAccount: true
     oAuthScopes: []
     onlySpinnakerManaged: false
